Switched footer to use dynamic date

--- a/pages/__footer.mdx
+++ b/pages/__footer.mdx
@@ -6,4 +6,6 @@ panelLayout: "two-column"
 weight: 10
 ---
 
-Copyright © 2022 The Oar House
+export const year = new Date().getFullYear();
+
+Copyright © {year} The Oar House
