--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -1,6 +1,7 @@
 ---
 layout: ../layouts/MdPanel.astro
 
+background: "slider"
 slider:
   {
     "images":
@@ -10,9 +11,9 @@ slider:
       ],
     "options":
       {
-        "fade": true,
-        "draggable": false,
-        "setGallerySize": false,
+        fade: true,
+        draggable: false,
+        setGallerySize: false,
         autoPlay: 8000,
         prevNextButtons: false,
         pageDots: false,
@@ -21,7 +22,6 @@ slider:
       },
   }
 
-foreground: white
 panelLayout: "centered"
 panelHeight: 80vh
 weight: 0
