Changed carousel settings

--- a/pages/__brands.mdx
+++ b/pages/__brands.mdx
@@ -29,10 +29,10 @@ slider:
     options:
       {
         imagesLoaded: false,
-        groupCells: 3,
         setGallerySize: true,
         wrapAround: true,
         pageDots: false,
+        autoPlay: true,
       },
   }
 ---
