Add image component

--- a/pages/__brands.mdx
+++ b/pages/__brands.mdx
@@ -26,12 +26,14 @@ slider:
           height: 256,
         },
       ],
+    imageFit: "contain",
     options:
       {
         imagesLoaded: false,
         setGallerySize: true,
         wrapAround: true,
         pageDots: false,
+        prevNextButtons: false,
         autoPlay: true,
       },
   }
