--- a/pages/__brands.mdx
+++ b/pages/__brands.mdx
@@ -29,12 +29,18 @@ slider:
     imageFit: "contain",
     options:
       {
-        imagesLoaded: false,
-        setGallerySize: true,
-        wrapAround: true,
-        pageDots: false,
-        prevNextButtons: false,
-        autoPlay: true,
+        loop: true,
+        slidesPerView: 1,
+        autoplay: { delay: 4000, disableOnInteraction: true },
+        navigation:
+          { nextEl: ".swiper-button-next", prevEl: ".swiper-button-prev" },
+        pagination: { el: ".swiper-pagination", dynamicBullets: true },
+        breakpoints: {
+            # // when window width is >= 480px
+            640: { slidesPerView: 2 },
+            # // when window width is >= 640px
+            1024: { slidesPerView: 3 },
+          },
       },
   }
 ---
