--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -11,14 +11,11 @@ slider:
       ],
     "options":
       {
-        fade: true,
-        draggable: false,
-        setGallerySize: false,
-        autoPlay: 8000,
-        prevNextButtons: false,
-        pageDots: false,
-        imagesLoaded: false,
-        selectedAttraction: 0.001,
+        speed: 6000,
+        loop: true,
+        effect: "fade",
+        fadeEffect: { crossFade: true },
+        autoplay: { delay: 5000, disableOnInteraction: false },
       },
   }
 
