Updated content to include sections

--- a/pages/__gallery.mdx
+++ b/pages/__gallery.mdx
@@ -24,4 +24,6 @@ weight: 2
 
 import Gallery from "../components/Gallery.astro";
 
-<Gallery gallery={frontmatter.gallery} />
+<section>
+  <Gallery gallery={frontmatter.gallery} />
+</section>
