--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -24,6 +24,10 @@ panelHeight: 80vh
 weight: 0
 ---
 
+<section>
+
 ![The Oar House](/images/tohc-logo-distressed-blk.svg)
 
 ## Opening January
+
+</section>
