--- a/pages/__footer.mdx
+++ b/pages/__footer.mdx
@@ -8,4 +8,4 @@ weight: 10
 
 export const year = new Date().getFullYear();
 
-Copyright © {year} The Oar House
+<section>Copyright © {year} The Oar House</section>
