Disabled brands due to loading issues

--- a/pages/.__brands.mdx
+++ b/pages/.__brands.mdx
@@ -47,4 +47,6 @@ slider:
 
 import Slider from "../components/Slider.astro";
 
-<Slider slider={frontmatter.slider} />
+<section>
+  <Slider slider={frontmatter.slider} />
+</section>
