--- a/pages/__brands.mdx
+++ b/pages/__brands.mdx
@@ -10,20 +10,23 @@ slider:
         {
           image: "/images/brands/LEFTFIELD+LOGO.png",
           link: "https://www.leftfieldcoffee.com/",
-          width: 256,
-          height: 256,
+          width: 200,
+          height: 200,
+          margin: "64px",
         },
         {
           image: "/images/brands/loafers-artisan-logo.png",
           link: "https://www.loafersartisan.com.au/",
-          width: 256,
-          height: 256,
+          width: 200,
+          height: 200,
+          margin: "64px",
         },
         {
           image: "/images/brands/Pietro_Gelateria.webp",
           link: "https://www.pietrogelateria.com/",
-          width: 256,
-          height: 256,
+          width: 200,
+          height: 200,
+          margin: "64px",
         },
       ],
     imageFit: "contain",
