--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -28,6 +28,8 @@ weight: 0
 
 ![The Oar House](/images/hero/tohc-logo-distressed-blk.svg)
 
+![](/images/icons/TOHC-wriggly-line-blk.svg)
+
 ## Opening January
 
 </section>
