--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -30,6 +30,6 @@ weight: 0
 
 ![](/images/icons/TOHC-wriggly-line-blk.svg)
 
-## Opening January
+<h2 class="center">Opening January</h2>
 
 </section>
