Updated hero images

--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -6,8 +6,9 @@ slider:
   {
     "images":
       [
-        { "image": "/images/hero/img-1894.jpg" },
+        { "image": "/images/hero/flat-white.jpg" },
         { "image": "/images/hero/img-3791.jpg" },
+        { "image": "/images/hero/espresso.jpg" },
       ],
     "options":
       {
