--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -26,11 +26,9 @@ weight: 0
 ---
 
 <section>
-
-![The Oar House](/images/hero/tohc-logo-distressed-blk.svg)
-
-![](/images/icons/TOHC-wriggly-line-blk.svg)
-
-<h2 class="center">Opening January</h2>
-
+  <div class="dot">
+    <img src="/images/hero/tohc-logo-distressed-blk.svg" alt="The Oar House" />
+    <img src="/images/icons/TOHC-wriggly-line-blk.svg" />
+    <h3 class="center">Opening January</h3>
+  </div>
 </section>
