Updated map content

--- a/pages/__map.mdx
+++ b/pages/__map.mdx
@@ -3,7 +3,7 @@ layout: "../layouts/MdPanel.astro"
 
 weight: 6
 panelLayout: "two-one-one"
-
+background: rgb(250 250 250)
 contact:
   [
     { "name": "name", "label": "Name", "type": "text", "required": true },
@@ -24,9 +24,13 @@ import Form from "../components/Form.astro";
 
 ## Contact details
 
+<address>
+
 - AP Hinds Reserve,
 - Milne Street,
 - Bayswater WA 6053
+
+</address>
 
 ### Contact us
 
