--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -25,6 +25,17 @@ panelHeight: 80vh
 weight: 0
 ---
 
+<header>
+  <a class="social twitter" href="#">
+    @twitter
+  </a>
+  <a class="social facebook" href="#">
+    @facebook
+  </a>
+  <a class="social instagram" href="#">
+    @instagram
+  </a>
+</header>
 <section>
   <div class="dot">
     <img src="/images/hero/tohc-logo-distressed-blk.svg" alt="The Oar House" />
