Updated colors and content

--- a/pages/__story.mdx
+++ b/pages/__story.mdx
@@ -2,7 +2,7 @@
 layout: ../layouts/MdPanel.astro
 weight: 3
 panelLayout: "one-two-one"
-background: rgb(228, 246, 245)
+background: rgb(245 245 245)
 ---
 
 <section>
