Added social media component

--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -26,17 +26,12 @@ panelHeight: 80vh
 weight: 0
 ---
 
+import Social from "../components/Social.astro";
+
 <header>
-  <a class="social twitter" href="#">
-    @twitter
-  </a>
-  <a class="social facebook" href="#">
-    @facebook
-  </a>
-  <a class="social instagram" href="#">
-    @instagram
-  </a>
+  <Social />
 </header>
+
 <section>
   <div class="dot">
     <img src="/images/hero/tohc-logo-distressed-blk.svg" alt="The Oar House" />
