Simplified opening dot graphic

--- a/pages/__hero.mdx
+++ b/pages/__hero.mdx
@@ -34,8 +34,10 @@ import Social from "../components/Social.astro";
 
 <section>
   <div class="dot">
-    <img src="/images/hero/tohc-logo-distressed-blk.svg" alt="The Oar House" />
-    <img src="/images/icons/TOHC-wriggly-line-blk.svg" />
-    <h3 class="center">Opening January</h3>
+    <img
+      src="/images/hero/tohc-logo-distressed-blk.svg"
+      alt="The Oar House"
+      style="margin-bottom: 4%"
+    />
   </div>
 </section>
