--- a/pages/__map.mdx
+++ b/pages/__map.mdx
@@ -26,9 +26,9 @@ import Form from "../components/Form.astro";
 
 <address>
 
-- AP Hinds Reserve,
-- Milne Street,
-- Bayswater WA 6053
+130 Milne Street, Bayswater (AP Hinds Reserve)
+
+Perth, WA, Australia, Western Australia
 
 </address>
 
