--- a/pages/__gallery.mdx
+++ b/pages/__gallery.mdx
@@ -9,7 +9,9 @@ gallery:
         { "image": "/images/gallery/tohc-choc-experiment-oct-10-2022.jpeg" },
         { "image": "/images/gallery/tohc-experiment-oct-2022.jpeg" },
         { "image": "/images/gallery/tohc-raspberry-coconut-oct-2022.jpeg" },
-        { "image": "/images/gallery/tohc-cinnamon-scrolls-type-icing.jpeg" },
+        {
+          "image": "/images/gallery/tohc-cinnamon-scrolls-type-icing-001.jpeg",
+        },
         { "image": "/images/gallery/tohc-dolngait-slice-oct-2022.jpeg" },
         {
           "image": "/images/gallery/tohc-lemon-tart-experiments-oct-2022.jpeg",
