--- a/pages/__map.mdx
+++ b/pages/__map.mdx
@@ -24,6 +24,8 @@ import Form from "../components/Form.astro";
 
 ## Contact details
 
+<p>Open 7 days per week, 6am - 1pm</p>
+
 <address>
 
 130 Milne Street, Bayswater (AP Hinds Reserve)
