Added Christmas trading hours

--- a/pages/__map.mdx
+++ b/pages/__map.mdx
@@ -24,6 +24,9 @@ import Form from "../components/Form.astro";
 
 ## Contact details
 
+<p>
+  <strong>Christmas trading:</strong> Closed - 24th, 25th and 26th December
+</p>
 <p>Open 7 days per week, 6am - 1pm</p>
 
 <address>
